--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 
-<object
-  type="application/json"
-  data={ sunrise: "05:02:00", 
+  { sunrise: "05:02:00", 
      sunset: "17:02:00", 
      moonrise: "18:02:00", 
      Moonset: "04:02:00", 
@@ -11,4 +9,4 @@
      hindu_maah: "Shraavan",
      paksha: "Shukla Paksha", }
   
->
+
